AntlrCSharp/DAXGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Users\adajin\Workspace\CS421_Project\DaxGrammar\AntlrCSharp\DAXGrammar.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class DAXGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		PLUS=1, MINUS=2, TIMES=3, DIVIDE=4, POWER=5, ARE_EQUAL=6, GREATER_THAN_EQUALS=7, 
		LESS_THAN_EQUALS=8, NOT_EQUAL=9, EQUALS=10, GREATER_THAN=11, LESS_THAN=12, 
		CONCATENATE=13, LOGICAL_AND=14, LOGICAL_OR=15, LOGICAL_IN=16, OPAREN=17, 
		CPAREN=18, OCURLY=19, CCURLY=20, LIST_SEPARATOR=21, BOOLEAN=22, ORDERING=23, 
		APPROXIMATEDISTINCTCOUNT_SYMBOL=24, AVERAGE_SYMBOL=25, AVERAGEA_SYMBOL=26, 
		AVERAGEX_SYMBOL=27, COUNT_SYMBOL=28, COUNTA_SYMBOL=29, COUNTAX_SYMBOL=30, 
		COUNTBLANK_SYMBOL=31, COUNTROWS_SYMBOL=32, COUNTX_SYMBOL=33, DISTINCTCOUNT_SYMBOL=34, 
		DISTINCTCOUNTNOBLANK_SYMBOL=35, MAX_SYMBOL=36, MAXA_SYMBOL=37, MAXX_SYMBOL=38, 
		MIN_SYMBOL=39, MINA_SYMBOL=40, MINX_SYMBOL=41, PRODUCT_SYMBOL=42, PRODUCTX_SYMBOL=43, 
		SUM_SYMBOL=44, SUMX_SYMBOL=45, COLUMNSTATISTICS_SYMBOL=46, CONTAINS_SYMBOL=47, 
		CONTAINSROW_SYMBOL=48, CONTAINSSTRING_SYMBOL=49, CONTAINSSTRINGEXACT_SYMBOL=50, 
		CUSTOMDATA_SYMBOL=51, HASONEFILTER_SYMBOL=52, HASONEVALUE_SYMBOL=53, ISAFTER_SYMBOL=54, 
		ISBLANK_SYMBOL=55, ISCROSSFILTERED_SYMBOL=56, ISEMPTY_SYMBOL=57, ISERROR_SYMBOL=58, 
		ISEVEN_SYMBOL=59, ISFILTERED_SYMBOL=60, ISINSCOPE_SYMBOL=61, ISLOGICAL_SYMBOL=62, 
		ISNONTEXT_SYMBOL=63, ISNUMBER_SYMBOL=64, ISODD_SYMBOL=65, ISONORAFTER_SYMBOL=66, 
		ISSELECTEDMEASURE_SYMBOL=67, ISSUBTOTAL_SYMBOL=68, ISTEXT_SYMBOL=69, NONVISUAL_SYMBOL=70, 
		SELECTEDMEASURE_SYMBOL=71, SELECTEDMEASUREFORMATSTRING_SYMBOL=72, SELECTEDMEASURENAME_SYMBOL=73, 
		USERCULTURE_SYMBOL=74, USERNAME_SYMBOL=75, USEROBJECTID_SYMBOL=76, USERPRINCIPALNAME_SYMBOL=77, 
		WHITESPACE=78, STRING=79, NUMBER=80, DATETIME=81, DOT=82, CURRENCY=83, 
		IDENTIFIER=84, TRUE=85, FALSE=86, ASC=87, DEC=88, DATA_TYPES=89;
	public const int
		RULE_startRule = 0, RULE_functionCategory = 1, RULE_aggregationFunctions = 2, 
		RULE_informationFunctions = 3, RULE_approximateDistinctionCountFunction = 4, 
		RULE_averageFunction = 5, RULE_averageaFunction = 6, RULE_averagexFunction = 7, 
		RULE_countFunction = 8, RULE_countaFunction = 9, RULE_countaxFunction = 10, 
		RULE_countBlankFunction = 11, RULE_countRowsFunction = 12, RULE_countxFunction = 13, 
		RULE_distinctCountFunction = 14, RULE_distinctCountNoBlankFunction = 15, 
		RULE_maxFunction = 16, RULE_maxaFunction = 17, RULE_maxxFunction = 18, 
		RULE_minFunction = 19, RULE_minaFunction = 20, RULE_minxFunction = 21, 
		RULE_productFunction = 22, RULE_productxFunction = 23, RULE_sumFunction = 24, 
		RULE_sumxFunction = 25, RULE_columnStatisticsFunction = 26, RULE_containsFunction = 27, 
		RULE_containsRowFunction = 28, RULE_containsStringFunction = 29, RULE_containsStringExactFunction = 30, 
		RULE_customDataFunction = 31, RULE_hasOneFilterFunction = 32, RULE_hasOneValueFunction = 33, 
		RULE_isAfterFunction = 34, RULE_isBlankFunction = 35, RULE_isCrossFilteredFunction = 36, 
		RULE_isEmptyFunction = 37, RULE_isErrorFunction = 38, RULE_isEvenFunction = 39, 
		RULE_isFilteredFunction = 40, RULE_isInScopeFunction = 41, RULE_isLogicalFunction = 42, 
		RULE_isNonTextFunction = 43, RULE_isNumberFunction = 44, RULE_isOddFunction = 45, 
		RULE_isOnOrAfterFunction = 46, RULE_isSelectedMeasureFunction = 47, RULE_isSubtotalFunction = 48, 
		RULE_isTextFunction = 49, RULE_nonVisualFunction = 50, RULE_selectedMeasureFunction = 51, 
		RULE_selectedMeasureFormatStringFunction = 52, RULE_selectedMeasureNameFunction = 53, 
		RULE_userCultureFunction = 54, RULE_userNameFunction = 55, RULE_userObjectIDFunction = 56, 
		RULE_userPrincipalNameFunction = 57, RULE_anyColRef = 58, RULE_simpleColRef = 59, 
		RULE_qualifiedColRef = 60, RULE_tableRef = 61, RULE_tableExpr = 62, RULE_exprOverTable = 63, 
		RULE_measureRef = 64, RULE_variant = 65, RULE_sortOrder = 66, RULE_scalarValue = 67, 
		RULE_value = 68, RULE_typeScalar = 69, RULE_withinText = 70, RULE_findText = 71;
	public static readonly string[] ruleNames = {
		"startRule", "functionCategory", "aggregationFunctions", "informationFunctions", 
		"approximateDistinctionCountFunction", "averageFunction", "averageaFunction", 
		"averagexFunction", "countFunction", "countaFunction", "countaxFunction", 
		"countBlankFunction", "countRowsFunction", "countxFunction", "distinctCountFunction", 
		"distinctCountNoBlankFunction", "maxFunction", "maxaFunction", "maxxFunction", 
		"minFunction", "minaFunction", "minxFunction", "productFunction", "productxFunction", 
		"sumFunction", "sumxFunction", "columnStatisticsFunction", "containsFunction", 
		"containsRowFunction", "containsStringFunction", "containsStringExactFunction", 
		"customDataFunction", "hasOneFilterFunction", "hasOneValueFunction", "isAfterFunction", 
		"isBlankFunction", "isCrossFilteredFunction", "isEmptyFunction", "isErrorFunction", 
		"isEvenFunction", "isFilteredFunction", "isInScopeFunction", "isLogicalFunction", 
		"isNonTextFunction", "isNumberFunction", "isOddFunction", "isOnOrAfterFunction", 
		"isSelectedMeasureFunction", "isSubtotalFunction", "isTextFunction", "nonVisualFunction", 
		"selectedMeasureFunction", "selectedMeasureFormatStringFunction", "selectedMeasureNameFunction", 
		"userCultureFunction", "userNameFunction", "userObjectIDFunction", "userPrincipalNameFunction", 
		"anyColRef", "simpleColRef", "qualifiedColRef", "tableRef", "tableExpr", 
		"exprOverTable", "measureRef", "variant", "sortOrder", "scalarValue", 
		"value", "typeScalar", "withinText", "findText"
	};

	private static readonly string[] _LiteralNames = {
		null, "'+'", "'-'", "'*'", "'/'", "'^'", "'=='", "'>='", "'<='", "'<>'", 
		"'='", "'>'", "'<'", "'&'", "'&&'", "'||'", "'IN'", "'('", "')'", "'{'", 
		"'}'", "','", null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "PLUS", "MINUS", "TIMES", "DIVIDE", "POWER", "ARE_EQUAL", "GREATER_THAN_EQUALS", 
		"LESS_THAN_EQUALS", "NOT_EQUAL", "EQUALS", "GREATER_THAN", "LESS_THAN", 
		"CONCATENATE", "LOGICAL_AND", "LOGICAL_OR", "LOGICAL_IN", "OPAREN", "CPAREN", 
		"OCURLY", "CCURLY", "LIST_SEPARATOR", "BOOLEAN", "ORDERING", "APPROXIMATEDISTINCTCOUNT_SYMBOL", 
		"AVERAGE_SYMBOL", "AVERAGEA_SYMBOL", "AVERAGEX_SYMBOL", "COUNT_SYMBOL", 
		"COUNTA_SYMBOL", "COUNTAX_SYMBOL", "COUNTBLANK_SYMBOL", "COUNTROWS_SYMBOL", 
		"COUNTX_SYMBOL", "DISTINCTCOUNT_SYMBOL", "DISTINCTCOUNTNOBLANK_SYMBOL", 
		"MAX_SYMBOL", "MAXA_SYMBOL", "MAXX_SYMBOL", "MIN_SYMBOL", "MINA_SYMBOL", 
		"MINX_SYMBOL", "PRODUCT_SYMBOL", "PRODUCTX_SYMBOL", "SUM_SYMBOL", "SUMX_SYMBOL", 
		"COLUMNSTATISTICS_SYMBOL", "CONTAINS_SYMBOL", "CONTAINSROW_SYMBOL", "CONTAINSSTRING_SYMBOL", 
		"CONTAINSSTRINGEXACT_SYMBOL", "CUSTOMDATA_SYMBOL", "HASONEFILTER_SYMBOL", 
		"HASONEVALUE_SYMBOL", "ISAFTER_SYMBOL", "ISBLANK_SYMBOL", "ISCROSSFILTERED_SYMBOL", 
		"ISEMPTY_SYMBOL", "ISERROR_SYMBOL", "ISEVEN_SYMBOL", "ISFILTERED_SYMBOL", 
		"ISINSCOPE_SYMBOL", "ISLOGICAL_SYMBOL", "ISNONTEXT_SYMBOL", "ISNUMBER_SYMBOL", 
		"ISODD_SYMBOL", "ISONORAFTER_SYMBOL", "ISSELECTEDMEASURE_SYMBOL", "ISSUBTOTAL_SYMBOL", 
		"ISTEXT_SYMBOL", "NONVISUAL_SYMBOL", "SELECTEDMEASURE_SYMBOL", "SELECTEDMEASUREFORMATSTRING_SYMBOL", 
		"SELECTEDMEASURENAME_SYMBOL", "USERCULTURE_SYMBOL", "USERNAME_SYMBOL", 
		"USEROBJECTID_SYMBOL", "USERPRINCIPALNAME_SYMBOL", "WHITESPACE", "STRING", 
		"NUMBER", "DATETIME", "DOT", "CURRENCY", "IDENTIFIER", "TRUE", "FALSE", 
		"ASC", "DEC", "DATA_TYPES"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DAXGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static DAXGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DAXGrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DAXGrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StartRuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionCategoryContext functionCategory() {
			return GetRuleContext<FunctionCategoryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(DAXGrammarParser.Eof, 0); }
		public StartRuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_startRule; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDAXGrammarVisitor<TResult> typedVisitor = visitor as IDAXGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStartRule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartRuleContext startRule() {
		StartRuleContext _localctx = new StartRuleContext(Context, State);
		EnterRule(_localctx, 0, RULE_startRule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 144;
			functionCategory();
			State = 145;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionCategoryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AggregationFunctionsContext aggregationFunctions() {
			return GetRuleContext<AggregationFunctionsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InformationFunctionsContext informationFunctions() {
			return GetRuleContext<InformationFunctionsContext>(0);
		}
		public FunctionCategoryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionCategory; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDAXGrammarVisitor<TResult> typedVisitor = visitor as IDAXGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionCategory(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionCategoryContext functionCategory() {
		FunctionCategoryContext _localctx = new FunctionCategoryContext(Context, State);
		EnterRule(_localctx, 2, RULE_functionCategory);
		try {
			State = 149;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case APPROXIMATEDISTINCTCOUNT_SYMBOL:
			case AVERAGE_SYMBOL:
			case AVERAGEA_SYMBOL:
			case AVERAGEX_SYMBOL:
			case COUNT_SYMBOL:
			case COUNTA_SYMBOL:
			case COUNTAX_SYMBOL:
			case COUNTBLANK_SYMBOL:
			case COUNTROWS_SYMBOL:
			case COUNTX_SYMBOL:
			case DISTINCTCOUNT_SYMBOL:
			case DISTINCTCOUNTNOBLANK_SYMBOL:
			case MAX_SYMBOL:
			case MAXA_SYMBOL:
			case MAXX_SYMBOL:
			case MIN_SYMBOL:
			case MINA_SYMBOL:
			case MINX_SYMBOL:
			case PRODUCT_SYMBOL:
			case PRODUCTX_SYMBOL:
			case SUM_SYMBOL:
			case SUMX_SYMBOL:
				EnterOuterAlt(_localctx, 1);
				{
				State = 147;
				aggregationFunctions();
				}
				break;
			case COLUMNSTATISTICS_SYMBOL:
			case CONTAINS_SYMBOL:
			case CONTAINSROW_SYMBOL:
			case CONTAINSSTRING_SYMBOL:
			case CONTAINSSTRINGEXACT_SYMBOL:
			case CUSTOMDATA_SYMBOL:
			case HASONEFILTER_SYMBOL:
			case HASONEVALUE_SYMBOL:
			case ISAFTER_SYMBOL:
			case ISBLANK_SYMBOL:
			case ISCROSSFILTERED_SYMBOL:
			case ISEMPTY_SYMBOL:
			case ISERROR_SYMBOL:
			case ISEVEN_SYMBOL:
			case ISFILTERED_SYMBOL:
			case ISINSCOPE_SYMBOL:
			case ISLOGICAL_SYMBOL:
			case ISNONTEXT_SYMBOL:
			case ISNUMBER_SYMBOL:
			case ISODD_SYMBOL:
			case ISONORAFTER_SYMBOL:
			case ISSELECTEDMEASURE_SYMBOL:
			case ISSUBTOTAL_SYMBOL:
			case ISTEXT_SYMBOL:
			case NONVISUAL_SYMBOL:
			case SELECTEDMEASURE_SYMBOL:
			case SELECTEDMEASUREFORMATSTRING_SYMBOL:
			case SELECTEDMEASURENAME_SYMBOL:
			case USERCULTURE_SYMBOL:
			case USERNAME_SYMBOL:
			case USEROBJECTID_SYMBOL:
			case USERPRINCIPALNAME_SYMBOL:
				EnterOuterAlt(_localctx, 2);
				{
				State = 148;
				informationFunctions();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
